# MagangBanyubramanta_Basten-Andika-Salim

./: process.slxc  untitled1.slxc
+bus_conv_fcns/+ros2/+msgToBus/: RefCachedMap.mat
Matlab/: process.slx  process.slx.autosave  process.slxc
Matlab/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
Matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  sMy4v78INJ2feGTmHqYjL5E.l  sMy4v78INJ2feGTmHqYjL5E.mat  sSX5r1rBP7yuxeWjcyShi1C.l  sSX5r1rBP7yuxeWjcyShi1C.mat
Matlab/tugas_matlab/: colorEnum.m  untitled1.slx  untitled1.slx.original  untitled1.slxc
Ros2/install/: local_setup.sh  setup.sh
Ros2/log/: latest_build
Ros2/src/communicator/: CMakeLists.txt
Ros2/src/communicator/src/: communicator.cpp
install/: local_setup.sh  setup.sh
log/: latest_build
slprj/_jitprj/: jitEngineAccessInfo.mat  s0VhF2SIGdbvxK8uBzbxi8B.l  s0VhF2SIGdbvxK8uBzbxi8B.mat  sFwv8N3858PoXOi4QqhWWdB.l  sFwv8N3858PoXOi4QqhWWdB.mat  sJPasmcMZIlAfpoeg5mbw5F.l  sJPasmcMZIlAfpoeg5mbw5F.mat  sLdBNlkaRP1UzLifmuYSlk.l  sLdBNlkaRP1UzLifmuYSlk.mat  sdNHthIW8zMo1phCIAEEFzC.l  sdNHthIW8zMo1phCIAEEFzC.mat  slYOHZD5JUxdKaR7zvxL9rG.l  slYOHZD5JUxdKaR7zvxL9rG.mat
src/: untitled1.slxc
src/communicator/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/tugas_matlab/: colorEnum.m  untitled1.slx  untitled1.slx.autosave
src/tugas_opencv/: CMakeLists.txt
src/tugas_yolo/: CMakeLists.txt  package.xml
src/tugas_yolo_yolocpp/: backup.txt
xbox/install/: local_setup.sh  setup.sh
xbox/log/: latest_build
xbox/src/: publisher.cpp
(+457 files in other folders)
