cmake_minimum_required(VERSION 3.8)
project(communicator)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(tugas_joy REQUIRED)
find_package(tugas_opencv REQUIRED)
find_package(tugas_yolo_yolocpp REQUIRED)
# find_package(asio REQUIRED)

add_executable(communicator src/communicator.cpp)
ament_target_dependencies(communicator rclcpp tugas_joy tugas_opencv tugas_yolo_yolocpp)

install(TARGETS
  communicator
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
